--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -29,17 +29,17 @@ jobs:
         run: sudo apt-get -y install libcurl4-gnutls-dev
       - name: Install rvest
         run: Rscript -e 'install.packages(c("pacman"))'
-      - name: Enable Rjava
-        run: sudo R CMD javareconf
-      - name: Install Rjava before tabulizer
+      # - name: Enable Rjava
+      #   run: sudo R CMD javareconf
+      # - name: Install Rjava before tabulizer
         #run:  Rscript -e 'install.packages("rJava"); library(rJava); install.packages("devtools");devtools::install_github("ropensci/tabulizer", args="--no-multiarch")'
-        run:  Rscript -e 'install.packages("rJava"); library(rJava); install.packages("devtools");'
+        # run:  Rscript -e 'install.packages("rJava"); library(rJava); install.packages("devtools");'
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown","pacman","devtools","RCurl","rPref","rvest","epibasix","png"))'
-      - name: Install tabulizerjars from source
-        run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizerjars/tabulizerjars_1.0.1.tar.gz", repos = NULL, type="source")'
-      - name: Install tabulizer from source
-        run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizer/tabulizer_0.2.2.tar.gz", repos = NULL, type="source")'
+      # - name: Install tabulizerjars from source
+      #   run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizerjars/tabulizerjars_1.0.1.tar.gz", repos = NULL, type="source")'
+      # - name: Install tabulizer from source
+      #   run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizer/tabulizer_0.2.2.tar.gz", repos = NULL, type="source")'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
       - name: Cache R packages
