--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,2 +1,4 @@
-rmd_files: ["index.Rmd","1_Fed_Yield_Curve.Rmd"]
+rmd_files: ["index.Rmd"]
+# rmd_files: ["index.Rmd","1_Fed_Yield_Curve.Rmd"]
 delete_merged_file: true
+
