--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -61,24 +61,24 @@ jobs:
           name: _book
           path: _book/
 
-  checkout-and-deploy:
-    runs-on: ubuntu-latest
-    needs: bookdown
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: _book # optional
-        path: _book # optional
-    - name: Deploy to GitHub Pages
-      uses: Cecilapp/GitHub-Pages-deploy@v3
-      with:
-        build_dir: _book/
-        email: ${{ secrets.EMAIL }}
-        jekyll: no                    
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        EMAIL: ${{ secrets.EMAIL }}
-        BUILD_DIR: _book/
+  #checkout-and-deploy:
+  #  runs-on: ubuntu-latest
+  #  needs: bookdown
+  #  steps:
+  #  - name: Checkout
+  #    uses: actions/checkout@v2
+  #  - name: Download artifact
+  #    uses: actions/download-artifact@v2
+  #    with:
+  #      name: _book # optional
+  #      path: _book # optional
+#    - name: Deploy to GitHub Pages
+#      uses: Cecilapp/GitHub-Pages-deploy@v3
+#      with:
+#        build_dir: _book/
+#        email: ${{ secrets.EMAIL }}
+#        jekyll: no                    
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        EMAIL: ${{ secrets.EMAIL }}
+#        BUILD_DIR: _book/
