--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -36,14 +36,19 @@ jobs:
 #        run: sudo R CMD javareconf
 #      - name: Install Rjava before tabulizer
 #        run:  Rscript -e 'install.packages("rJava"); library(rJava); install.packages("devtools");'
-      - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown","bookdown","pacman","devtools","RCurl","rPref","rvest","epibasix","png"))'
+#      - name: Install rmarkdown
+#        run: Rscript -e 'install.packages(c("rmarkdown","bookdown","pacman","devtools","RCurl","rPref","rvest","epibasix","png"))'
 #      - name: Install tabulizerjars from source
 #        run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizerjars/tabulizerjars_1.0.1.tar.gz", repos = NULL, type="source")'
 #      - name: Install tabulizer from source
 #        run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizer/tabulizer_0.2.2.tar.gz", repos = NULL, type="source")'
-      - name: Render Book
-        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+#      - name: Render Book
+#        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+      - name: Render document
+        uses: lc5415/rmarkdown-action@v1
+        with:
+          input_file: index.Rmd
+	        output_format: html_document
       - name: Cache R packages
         if: runner.os != 'Windows'
         uses: actions/cache@v1
