--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -34,8 +34,12 @@ jobs:
 #        run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizerjars/tabulizerjars_1.0.1.tar.gz", repos = NULL, type="source")'
 #      - name: Install tabulizer from source
 #        run:  Rscript -e 'install.packages("https://cran.r-project.org/src/contrib/Archive/tabulizer/tabulizer_0.2.2.tar.gz", repos = NULL, type="source")'
-      - name: Render Book
-        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+#      - name: Render Book
+#        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+      - name: Render Book from Action
+        uses: ckrusemd/rmarkdown-action@v0.1
+        with:
+           input_file: index.Rmd
 #      - name: Render document
 #        uses: happyRip/rmarkdown-action@v1.1
 #        with:
