master/main error

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -1,9 +1,9 @@
 on:
   push:
      branches:
-       - main
+       - master
   schedule:
-    - cron:  '0 3 * * *' 
+    - cron:  '0 3 * * *'
 
 name: money-printer-go-brrr-render
 
