--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,4 +4,4 @@
 delete_merged_file: true
 
 rmd_subdirs: ["Chapters/01_Indicators","Chapters/02_Housing","Chapters/03_InterestRates"]
-rmd_files: ["*.Rmd"]
+#rmd_files: ["*.Rmd"]
