--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,4 +7,4 @@ rmd_subdirs: ["Chapters/01_Indicators",
 #"Chapters/02_Housing",
 #"Chapters/03_InterestRates"
 ]
-#rmd_files: ["*.Rmd"]
+rmd_files: ["*.Rmd"]
