--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,15 @@
 delete_merged_file: true
-rmd_subdir: ["Chapters/01_Indicators",
+# rmd_subdir: ["Chapters/01_Indicators",
+# "Chapters/02_Housing",
+# "Chapters/03_InterestRates",
+# "Chapters/04_Markets",
+# "Chapters/05_ETFs"
+# ]
+
+rmd_subdir: [
+  # "Chapters/01_Indicators",
 "Chapters/02_Housing",
-"Chapters/03_InterestRates",
-"Chapters/04_Markets",
-"Chapters/05_ETFs"
+# "Chapters/03_InterestRates",
+# "Chapters/04_Markets",
+# "Chapters/05_ETFs"
 ]
