--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,6 +10,7 @@ rmd_subdir: [
 "Chapters/01_Indicators",
 "Chapters/02_Housing",
  "Chapters/03_InterestRates",
-"Chapters/04_Markets",
-"Chapters/05_ETFs"
+"Chapters/04_Markets"
+#,
+#"Chapters/05_ETFs"
 ]
