This is a new commit for what I originally planned to be amended

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,6 +7,7 @@ delete_merged_file: true
 # ]
 
 rmd_subdir: [
+"Chapters/00_ReleaseCalendar",
 "Chapters/01_Indicators",
 "Chapters/02_Housing",
  "Chapters/03_InterestRates",
