skip markets for now

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,8 +10,7 @@ rmd_subdir: [
 "Chapters/00_ReleaseCalendar",
 "Chapters/01_Indicators",
 "Chapters/02_Housing",
- "Chapters/03_InterestRates",
-"Chapters/04_Markets"
-#,
+"Chapters/03_InterestRates"#,
+#"Chapters/04_Markets" #,
 #"Chapters/05_ETFs"
 ]
