--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,10 +7,10 @@ delete_merged_file: true
 # ]
 
 rmd_subdir: [
-"Chapters/00_ReleaseCalendar" #,
+"Chapters/00_ReleaseCalendar",
 #"Chapters/01_Indicators",
 #"Chapters/02_Housing",
-#"Chapters/03_InterestRates"#,
+"Chapters/03_InterestRates"#,
 #"Chapters/04_Markets" #,
 #"Chapters/05_ETFs"
 ]
